Update Script and README
- Fixed ID3 tag handling
    - Now uses EasyID3 to match tags to field
    - If metadata_field is not in the EasyID3 dictionary checks to see if it is a valid ID3 Tag ID and uses that to write the tag
    - Handles writing to comments field if "Comments" is specified and publisher field if "Publisher" or "Label" is specified as these are common but EasyID3 does not support them
- Added "tag_delimiter" to config.json, allows specifying delimiter used to separate multiple tags
- Updated example_config.json with "tag_delimiter"
-Updated README

--- a/example_config.json
+++ b/example_config.json
@@ -1,4 +1,9 @@
 {
+    "use_rekordbox_xml": false,
+    "rekordbox_db_path": "/path/to/exported/rekordbox.xml",
+    "music_directory": "/path/to/your/music/directory",
+    "mytag_db_file": "MyTags.xml",
+	"tag_delimiter": " / ",
     "categories": {
         "Genre": {
             "tags": [
@@ -43,9 +48,5 @@
             "rekordbox_field": "Comments",
             "metadata_field": "COMMENT"
         }
-    },
-    "use_rekordbox_xml": false,
-    "rekordbox_db_path": "/path/to/exported/rekordbox.xml",
-    "music_directory": "/path/to/your/music/directory",
-    "mytag_db_file": "MyTags.xml"
+    }
 }
